2024-09-07  Paul J. Lucas <paul@lucasmail.org>

   * autocomplete.c, c_ast.c, c_ast.h, c_ast_check.c, c_ast_util.c, c_sglob.c,
     c_sname.c, c_sname.h, c_type.c, cdecl_command.c, cli_options.c, dam_lev.c,
     did_you_mean.c, gibberish.c, lexer.l, p_macro.c, p_token.c, p_token.h,
     parse.c, parser.y, print.c, prompt.c, read_line.c, set_options.c, slist.c,
     strbuf.c, util.c, util.h: #include <stddef.h> clean-up.

2024-09-06  Paul J. Lucas <paul@lucasmail.org>

   * strbuf.c, strbuf.h: Eliminated strbuf_sepsn().
   * gibberish.c: Eliminated colon2.
   * p_macro.c, strbuf.h: Eliminated strbuf_sepc_putsn().
   * c_ast_warn.c, c_lang.h: Added LANG_register_NOT_DEPRECATED.
   * c_ast_check.c, c_ast_util.h, c_ast_warn.c, dump.c, english.c, gibberish.c:
     Added c_ast_is_param().
   * c_ast_warn.c: Factored out c_ast_warn_func_params().
   * c_ast_warn.c: s/ast/raw_ast/
   * src/Makefile.am, c_ast_check.c, c_ast_check.h, c_ast_util.h, c_ast_warn.c,
     c_ast_warn.h, parser.y: Split warning code into c_ast_warn.[ch].

2024-09-05  Paul J. Lucas <paul@lucasmail.org>

   * c_ast_check.c: Factored out c_ast_check_func_default_delete().
   * gibberish.c: graph_token_c() now rigorously checks token[1].
   * gibberish.c: alt_token_c() now rigorously checks token[1].

2024-09-04  Paul J. Lucas <paul@lucasmail.org>

   * c_ast_check.c: Factored out c_ast_check_oper_member().
   * c_ast_check.c: Removed uncessary asserts.
   * c_ast_check.c: Factored out c_ast_check_oper_num_params().
   * c_ast_check.c: Moved declaration of ret_ast.
   * cli_options.c, util.c, util.h: Eliminated STRTOULL_ERROR.

2024-09-03  Paul J. Lucas <paul@lucasmail.org>

   * configure.ac: Updated version.
   * c_ast_check.c: Put %s back to eliminatw warning.

2024-09-02  Paul J. Lucas <paul@lucasmail.org>

   * read_line.c: Added TRI_BS.
   * read_line.c: Added missing #include.

2024-09-01  Paul J. Lucas <paul@lucasmail.org>
