@@ -1,3 +1,8 @@
+2024-09-08  Paul J. Lucas <paul@lucasmail.org>
+
+   * autocomplete.c, pjl_config.h, prompt.c: Added #include <stdio.h> for
+     broken readline.h versions.
+
 2024-09-07  Paul J. Lucas <paul@lucasmail.org>
 
    * autocomplete.c, c_ast.c, c_ast.h, c_ast_check.c, c_ast_util.c, c_sglob.c,
